Update mmap example for designed intent of vm.max_map_count